departure list: avoid route/info overflow on small screens

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -347,8 +347,8 @@ div.app li .route {
 	position:absolute;
 	top:1px;
 	left:7.7em;
+	right: 7em;
 	height: 1.2em;
-	width: 70%;
 	overflow: hidden;
 	color: $route-color;
 }
@@ -360,8 +360,8 @@ div.app li .info {
 	position:absolute;
 	top:1px;
 	left:7.7em;
+	right: 7em;
 	height: 1.2em;
-	width: 70%;
 	overflow: hidden;
 }
 
